--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "homepage": "https://github.com/globeletjs/tile-kiln#readme",
   "devDependencies": {
-    "rollup": "^2.33.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "rollup": "^2.70.1",
     "touch-sampler": "0.0.1"
   },
   "dependencies": {
